force-app/main/default/objects/WhatsappUser__c/WhatsappUser__c.object-meta.xml
<CustomObject>
    <label>Whatsapp User</label>
    <nameField>
        <displayFormat>W-{0000}</displayFormat>
        <label>Whatsapp User Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Whatsapp Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>