force-app/main/default/objects/WhatsappUser__c/fields/BusinessNumber__c.field-meta.xml
<CustomField>
    <fullName>BusinessNumber__c</fullName>
    <label>Business Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>