force-app/main/default/objects/WhatsappUser__c/fields/CustomerName__c.field-meta.xml
<CustomField>
    <fullName>CustomerName__c</fullName>
    <label>Customer Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>