force-app/main/default/objects/WhatsappUser__c/fields/latestDateTime__c.field-meta.xml
<CustomField>
    <fullName>latestDateTime__c</fullName>
    <label>latestDateTime</label>
    <type>DateTime</type>
</CustomField>