force-app/main/default/objects/WhatsappUser__c/fields/tags_data__c.field-meta.xml
<CustomField>
    <fullName>tags_data__c</fullName>
    <label>tags_data</label>
    <length>100</length>
    <type>Text</type>
</CustomField>