force-app/main/default/objects/WhatsappUser__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CustomerName__c</columns>
    <columns>CustomerPhone__c</columns>
    <columns>BusinessNumber__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>